--- a/charts/shenyu/templates/ConfigMap.yaml
+++ b/charts/shenyu/templates/ConfigMap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: shenyu-cm
-  namespace: default
+  name: {{ template "shenyu.fullname" . }}
+  namespace: .Release.Namespace
 data:
   application-local.yml: |
     server:
