ci: minor changes to test release
Signed-off-by: Bird <aflybird0@gmail.com>

--- a/charts/shenyu/Chart.yaml
+++ b/charts/shenyu/Chart.yaml
@@ -1,9 +1,10 @@
 apiVersion: v2
 name: shenyu
-description: Helm Chart for deploying Apache ShenYu in Kubernetes
+description: Helm Chart for deploying Apache ShenYu in Kubernetes(test)
 type: application
 version: 2.4.3
 appVersion: "1.16.0"
 icon: https://shenyu.apache.org/img/logo.png
 maintainers:
   - name: erdengk
+  - name: aFlyBird0
