--- a/charts/shenyu/Chart.yaml
+++ b/charts/shenyu/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: shenyu
-description: Helm Chart for deploying Apache ShenYu in Kubernetes(test)
+description: Helm Chart for deploying Apache ShenYu in Kubernetes(test for 2.4.4)
 type: application
-version: 2.4.2
+version: 2.4.4
 appVersion: "1.16.0"
 icon: https://shenyu.apache.org/img/logo.png
 maintainers:
