--- a/charts/shenyu/templates/ConfigMap.yaml
+++ b/charts/shenyu/templates/ConfigMap.yaml
@@ -50,3 +50,9 @@ data:
             org.apache.shenyu.bonuspoint: info
             org.apache.shenyu.lottery: info
             org.apache.shenyu: info
+  {{- if .Values.dataSource.mysql.enabled}}
+  application-mysql.yml: |
+    spring.datasource.url: jdbc:mysql://mysql.shenyu.svc.cluster.local:3306/shenyu?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    spring.datasource.username: {{ .Values.dataSource.mysql.username }}
+    spring.datasource.password: {{ .Values.dataSource.mysql.password }}
+  {{- end }}
