--- a/charts/shenyu/templates/shenyu-bootstrap-deployment.yaml
+++ b/charts/shenyu/templates/shenyu-bootstrap-deployment.yaml
@@ -2,13 +2,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: {{.Release.Namespace}}
+  namespace: {{ .Release.Namespace }}
   name: {{ template "shenyu.fullname" . }}-bootstrap
+  labels:
+    "app.kubernetes.io/name": '{{ template "shenyu.name" . }}-bootstrap'
+    "app.kubernetes.io/managed-by": "{{ .Release.Service }}"
+    "app.kubernetes.io/component": "shenyu-bootstrap"
+    "app.kubernetes.io/instance": "{{ .Release.Name }}"
 spec:
   selector:
     matchLabels:
-      app: shenyu-bootstrap
-  replicas: 1
+      "app.kubernetes.io/component": "shenyu-bootstrap"
+      "app.kubernetes.io/instance": "{{ .Release.Name }}"
+  replicas: {{ .Values.replicas }}
   template:
     metadata:
       labels:
@@ -23,7 +29,7 @@ spec:
                 path: application-local.yml
       containers:
         - name: shenyu-bootstrap
-          image: {{ .Values.bootstrap.image }}:{{ default "2.4.3" .Values.bootstrap.tag }}
+          image: {{ .Values.bootstrap.image }}:{{ required "A valid .Values.version entry required!" .Values.version }}
           ports:
             - containerPort: 9195
           env:
