--- a/charts/shenyu/values.yaml
+++ b/charts/shenyu/values.yaml
@@ -1,11 +1,27 @@
-replicas: 1
-label: shenyu
 version: 2.4.3
+replicas: 1
 admin:
   enabled: true
   image: apache/shenyu-admin
-  tag: 2.4.3
+  nodePort: 31095
 bootstrap:
   enabled: true
   image: apache/shenyu-bootstrap
-  tag: 2.4.3
+  nodePort: 31195
+dataSource:
+  # only one dataSource is allowed
+  h2:
+    enabled: true
+  mysql:
+    enabled: false
+    ip: YOUR_MYSQL_IP
+    port: 3306
+    username: YOUR_USERNAME
+    password: YOUR_PASSWORD
+    # to specify where the mysql connector is
+    connector:
+      # the k8s node to store the mysql connector
+      nodeName: YOUR_NODE_NAME
+      # the path to the mysql connector, this path should contain "mysql-connector.jar"
+      path: /home/shenyu/shenyu-admin/k8s-pv
+
