--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: Lint and Test Charts
 
-on:
-  pull_request:
+on: push
+#  pull_request:
 
 jobs:
   lint-test:
@@ -18,6 +18,12 @@ jobs:
         uses: azure/setup-helm@v3.0
         with:
           version: v3.8.2
+
+      - name: Update Helm Dependency
+        run: |
+          cd charts/shenyu
+          helm dependency update
+          cd ../..
 
       - name: Set up chart-testing
         uses: ./.github/actions/chart-testing-action
