--- a/charts/shenyu/templates/shenyu-admin-svc.yaml
+++ b/charts/shenyu/templates/shenyu-admin-svc.yaml
@@ -4,9 +4,9 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ template "shenyu.fullname" . }}-admin
+  name: {{ template "common.names.fullname" . }}-admin
   labels:
-    "app.kubernetes.io/name": '{{ template "shenyu.name" . }}-admin'
+    "app.kubernetes.io/name": '{{ template "common.names.name" . }}-admin'
     "app.kubernetes.io/managed-by": "{{ .Release.Service }}"
     "app.kubernetes.io/component": "shenyu-admin"
     "app.kubernetes.io/instance": "{{ .Release.Name }}"
