--- a/charts/shenyu/templates/shenyu-bootstrap-svc.yaml
+++ b/charts/shenyu/templates/shenyu-bootstrap-svc.yaml
@@ -4,9 +4,9 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: {{ .Release.Namespace }}
-  name: {{ template "shenyu.fullname" . }}-bootstrap
+  name: {{ template "common.names.fullname" . }}-bootstrap
   labels:
-    "app.kubernetes.io/name": '{{ template "shenyu.name" .}}-bootstrap'
+    "app.kubernetes.io/name": '{{ template "common.names.name" .}}-bootstrap'
     "app.kubernetes.io/managed-by": "{{ .Release.Service }}"
     "app.kubernetes.io/component": "shenyu-bootstrap"
     "app.kubernetes.io/instance": "{{ .Release.Name }}"
