--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,11 +19,12 @@ jobs:
         with:
           version: v3.8.2
 
-#      - name: Update Helm Dependency
-#        run: |
-#          cd charts/shenyu
-#          helm dependency update
-#          cd ../..
+      - name: Update Helm Dependency
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          cd charts/shenyu
+          helm dependency update
+          cd ../..
 
       - name: Set up chart-testing
         uses: ./.github/actions/chart-testing-action
