feat: support PostgreSQL and Oracle
Signed-off-by: Bird <aflybird0@gmail.com>

--- a/charts/shenyu/values.yaml
+++ b/charts/shenyu/values.yaml
@@ -52,7 +52,7 @@ dataSource:
     password:
     # oracle driver class name
     driverClass: oracle.jdbc.OracleDriver
-    connectorVersion:
+    connectorVersion: 19.3.0.0
 
 #################################################
 #     application.yml of admin and bootstrap    #
